website/versioned_docs/version-17.1.0/api/puppeteer.target.md
---
sidebar_label: Target
---

# Target class

**Signature:**

```typescript
export declare class Target
```

## Remarks

The constructor for this class is marked as internal. Third-party code should not call the constructor directly or create subclasses that extend the `Target` class.

## Methods

| Method                                                       | Modifiers | Description                                                                                                                                |
| ------------------------------------------------------------ | --------- | ------------------------------------------------------------------------------------------------------------------------------------------ |
| [browser()](./puppeteer.target.browser.md)                   |           | Get the browser the target belongs to.                                                                                                     |
| [browserContext()](./puppeteer.target.browsercontext.md)     |           | Get the browser context the target belongs to.                                                                                             |
| [createCDPSession()](./puppeteer.target.createcdpsession.md) |           | Creates a Chrome Devtools Protocol session attached to the target.                                                                         |
| [opener()](./puppeteer.target.opener.md)                     |           | Get the target that opened this target. Top-level targets return <code>null</code>.                                                        |
| [page()](./puppeteer.target.page.md)                         |           | If the target is not of type <code>&quot;page&quot;</code> or <code>&quot;background_page&quot;</code>, returns <code>null</code>.         |
| [type()](./puppeteer.target.type.md)                         |           | Identifies what kind of target this is.                                                                                                    |
| [url()](./puppeteer.target.url.md)                           |           |                                                                                                                                            |
| [worker()](./puppeteer.target.worker.md)                     |           | If the target is not of type <code>&quot;service_worker&quot;</code> or <code>&quot;shared_worker&quot;</code>, returns <code>null</code>. |
